--- a/client/components/Kids/Cards/gallery.module.css
+++ b/client/components/Kids/Cards/gallery.module.css
@@ -37,12 +37,41 @@
     cursor: pointer;
 }
 
+.categoryMyPhotosActive{
+    background-color: #27bfc1;
+    color: #FFFFFF;
+    border-radius: 75px;
+    flex: 1 1 calc(25% - 10px); /* Ширина для 4 колонок на больших экранах */
+    text-align: center;
+    min-width: 150px;
+    max-width: 200px;
+    cursor: pointer;
+    border:none;
+    height: 40px;
+    margin-top: 8px;
+}
+
+
+.categoryMyPhotosNotActive{
+    background-color: #FFFFFF;
+    color: #27bfc1;
+    border-radius: 75px;
+    flex: 1 1 calc(25% - 10px); /* Ширина для 4 колонок на больших экранах */
+    text-align: center;
+    min-width: 150px;
+    max-width: 200px;
+    cursor: pointer;
+    height: 40px;
+    margin-top: 8px;
+    border: solid 2px #27bfc1;
+}
+
 .downloadButton {
     padding: 15px 40px;
     margin: 5px;
     border: none;
     border-radius: 5px;
-    background-color: #c39020;
+    background-color: #27bfc1;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
