--- a/client/components/Kids/upperPart/top.module.css
+++ b/client/components/Kids/upperPart/top.module.css
@@ -37,6 +37,30 @@
     width: 300px; /* Фиксированная ширина кнопки */
     height: 50px; /* Фиксированная высота кнопки */
     cursor: pointer;
+    position: relative;
+
+    .tooltip {
+        visibility: hidden; /* Подсказка скрыта по умолчанию */
+        opacity: 0;
+        background-color: #27bfc1;
+        color: #fff;
+        text-align: center;
+        border-radius: 4px;
+        padding: 5px;
+        position: absolute;
+        top: 100%; /* Подсказка появится под кнопкой */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 120px;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 1;
+    }
+
+    &:hover .tooltip {
+        visibility: visible;
+        opacity: 1;
+    }
+
 }
 
 .ParticipateYellow img {
