--- a/client/components/Kids/upperPart/vote.module.css
+++ b/client/components/Kids/upperPart/vote.module.css
@@ -22,6 +22,30 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    position: relative;
+    cursor: pointer;
+
+    .tooltip {
+        visibility: hidden; /* Подсказка скрыта по умолчанию */
+        opacity: 0;
+        background-color: #27bfc1;
+        color: #fff;
+        text-align: center;
+        border-radius: 4px;
+        padding: 5px;
+        position: absolute;
+        top: 80%; /* Подсказка появится под кнопкой */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 120px;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 1;
+    }
+
+    &:hover .tooltip {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .cloudImage {
