--- a/client/components/Kids/Cards/gallery.module.css
+++ b/client/components/Kids/Cards/gallery.module.css
@@ -9,6 +9,8 @@
 .title {
     font-size: 36px;
     margin: 20px 0;
+    color: #27bfc1;
+    font-weight: bold;
 }
 
 /*.ageButtons {*/
@@ -49,11 +51,13 @@
     border:none;
     height: 40px;
     margin-top: 8px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 
 .categoryMyPhotosNotActive{
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     color: #27bfc1;
     border-radius: 75px;
     flex: 1 1 calc(25% - 10px); /* Ширина для 4 колонок на больших экранах */
@@ -63,7 +67,10 @@
     cursor: pointer;
     height: 40px;
     margin-top: 8px;
-    border: solid 2px #27bfc1;
+    border: solid 3px #27bfc1;
+    font-size: 20px;
+    font-weight: bold;
+
 }
 
 .downloadButton {
@@ -143,7 +150,7 @@
     margin-top: 5px;
     border: none;
     border-radius: 50px;
-    background-color: #c39020;
+    background-color: #f21b00;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -151,7 +158,7 @@
 }
 
 .voteButton:hover {
-    background-color: #c39020;
+    background-color: #f21b00;
 }
 
 /* Адаптивные стили */
